--- a/stories/tr/0030_duygular.html
+++ b/stories/tr/0030_duygular.html
@@ -45,7 +45,7 @@
 
 <h1 id="duygular">Duygular</h1>
 
-Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>English</div><div class="pagebreak">
+Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
@@ -82,7 +82,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>English</div><div class="pag
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Kathy Arbuckle<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Kathy Arbuckle<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/feelings">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
