--- a/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi.html
+++ b/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi.html
@@ -45,7 +45,7 @@
 
 <h1 id="bir-kk-tohum-wangari-maathainin-hikayesi">Bir Küçük Tohum: Wangari Maathai’nin Hikayesi</h1>
 
-Nicola Rijsdijk<br>English</div><div class="pagebreak">
+Nicola Rijsdijk<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
 
@@ -131,7 +131,7 @@ Nicola Rijsdijk<br>English</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Nicola Rijsdijk<br /><strong>Illustrations:</strong> Maya Marshak<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Nicola Rijsdijk<br /><strong>Illustrations:</strong> Maya Marshak<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
