--- a/stories/tr/0243_büyükanne-ile-tatil.html
+++ b/stories/tr/0243_büyükanne-ile-tatil.html
@@ -45,7 +45,7 @@
 
 <h1 id="bykanne-ile-tatil">Büyükanne ile Tatil</h1>
 
-Violet Otieno<br>English</div><div class="pagebreak">
+Violet Otieno<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
 
@@ -187,7 +187,7 @@ Violet Otieno<br>English</div><div class="pagebreak">
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Violet Otieno<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Violet Otieno<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/holidays-grandmother">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
