--- a/stories/yue/0337_蠟仔_slides.html
+++ b/stories/yue/0337_蠟仔_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Simbegwire - Global African Storybook</title>
+  <title>蠟仔 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="simbegwire" class="slide level1">
-<h1>Simbegwire</h1>
+<section id="蠟仔" class="slide level1">
+<h1>蠟仔</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>Simbegwire annesi öldüğü zaman çok üzüldü. Simbegwire'ın babası, kızıyla ilgilenmek için elinden gelenin en iyisini yaptı. Zamanla, Simbegwire'ın annesi olmadan da mutlu olmayı öğrendiler. Her sabah oturdular ve önlerindeki gün hakkında konuştular. Her akşam, birlikte aksam yemeği hazırladılar. Bulaşıkları beraberce yıkadıktan sonra, Simbegwire'ın babası ona ev ödevlerinde yardım etti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
+<p>好耐好耐之前，有一家人好快樂噉一齊住。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>Bir gün, Simbegwire'ın babası normalden geç geldi eve. &quot;Neredesin çocuğum?&quot; diye seslendi. Simbegwire babasına koştu. Babasının bir kadının elini tuttuğunu görünce, olduğu yerde hareketsiz durdu. &quot;Seni özel biriyle tanıştırmak istiyorum, çocuğum. Bu Anita&quot; dedi babası gülümseyerek.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
+<p>班細路仔從來都唔會打交，仲成日幫手爸爸媽媽喺屋企同埋農田度做嘢。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>&quot;Merhaba Simbegwire, baban bana senin hakkında çok şey anlattı,&quot; dedi Anita. Ama gülümsemiyor veya Simbegwire'ın elini tutmuyordu. Simbegwire'ın babası mutlu ve heyecanlıydı. Üçünün birlikte yaşayacağını, ve hayatlarının nasıl güzel olacağını anlatıyordu. &quot;Çocuğum, umarım ki Anita'yı annen olarak kabul edersin.&quot; dedi babası.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
+<p>但係佢哋唔准靠近火。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p>Simbegwire'ın hayatı değişti Artık sabahları babası ile birlikte oturmak için zamanı yoktu. Anita ona o kadar fazla ev işleri veriyordu ki, akşamları ev ödevlerini yapmak için çok yorgun oluyordu. Yemekten sonra direk yatağına gidiyordu. Onun tek rahatı annesinin ona verdiği renkli battaniyesi idi. Simbegwire'ın babası kızının mutsuz olduğunu fark etmiş görünmüyordu.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
+<p>佢哋淨可以喺晚上做嘢。冇計啦，因為佢哋都係用蠟做嘅！</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p>Birkaç ay sonra, Simbegwire'ın babası onlara bir süreliğine evden uzaklaşacağını söyledi. &quot;İşimden dolayı seyahat etmem lazım.&quot; dedi babası. &quot;Ama biliyorum ki ikiniz birbirinizle ilgilenirsiniz.&quot; Simbegwire'ın yüzü düştü fakat babası fark etmedi. Anita hiç bir şey söylemedi. O da mutlu değildi.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
+<p>但係其中之一個男仔好想出門，佢想去到太陽底下睇吓。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>Simbegwire için işler daha da kötüye gitti. Ev işlerini bitirmezse, veya şikayet ederse, Anita ona vuruyordu. Ve akşam yemeklerinde, kadın yemeğin çoğunu yerken, Simbegwire'a sadece birkaç lokma bırakıyordu. Her gece, Simbegwire uyumak için annesinin battaniyesine sarılıp kendi kendine ağlıyordu.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
+<p>有一日，佢終於頂唔順啦。雖然兄弟都警告過佢......</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. &quot;Seni tembel kız!&quot; diye bağırdı Anita. Simbegwire'ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve ikiye yırtıldı.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
+<p>但係已經太遲啦！佢喺炎熱嘅太陽底下融化咗。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p>Simbegwire çok üzgündü. Evden kaçmaya karar verdi. Annesinin battaniyesinin parçalarını aldı, biraz yemek paketledi, ve evden ayrıldı. Babasının ayrıldığı yolu takip etti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
+<p>其他蠟做嘅細路仔見到佢哋嘅兄弟融化消失咗，非常之傷心。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
-<p>Akşam olduğu zaman, akarsuyun yanındaki uzun bir ağaca tırmandı, ve kendi için dalların arasında bir yatak yaptı. Uykuya dalarken şarkı söyledi: &quot;Aanne, aanne, aanne, beni bıraktın. Beni bıraktın ve bir daha hiç geri dönmedin. Babam artık beni sevmiyor. Anne, ne zaman geri dönüyorsun? Beni bıraktın.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
+<p>但係佢哋諗出咗一個好辦法：佢哋將熔化咗嗰嚿蠟捻成咗一隻雀仔。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
-<p>Ertesi sabah, Simbegwire şarkıyı tekrar söyledi. Kadınlar, kıyafetlerini yıkamak için akarsuya geldiklerinde, uzun ağaçtan gelen hüzünlü şarkıyı duydular. Onlar, sadece rüzgarın yaprakları salladığını düşündüler, ve işlerine devam ettiler. Ama kadınlardan biri şarkıyı çok dikkatlice dinledi.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
+<p>佢哋將變成雀仔嘅兄弟帶到咗一座高山上面。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, &quot; Simbegwire, erkek kardeşimin çocuğu!&quot; Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire'a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
+<p>等到太陽升起上嚟，佢一路迎晨光一路唱歌，就飛走咗。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,57 +195,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>Simbegwire'ın halası, çocuğu kendi evine götürdü. Simbegwire'a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın gözyaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Simbegwire'ın babası eve döndüğü zaman, kızının odasını boş buldu. &quot;Ne oldu Anita?&quot; diye buruk bir yürekle sordu. Kadın, Simbegwire'ın kaçtığını açıkladı. &quot;Ben ondan bana saygı duymasını istedim.&quot; dedi &quot;Ama belki çok serttim.&quot; Simbegwire'ın babası evi terk etti ve akarsu yönünde ilerledi. Eğer kız kardeşi Simbegwire'ı görmüşse öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p>Simbegwire babasını çok uzaktan gördüğünde, kuzenleriyle birlikte oynuyordu. Belki babası kızgın olabilir diye korktu, o yüzden saklanmak için evin içine koştu. Ama babası kızının yanına gitti ve dedi ki &quot;Simbegwire, sen kendin için mükemmel bir anne buldun. Seni seven ve anlayan biri. Seninle gurur duyuyor ve seni seviyorum.&quot; Onlar, Simbegwire'ın istediği kadar halasında kalabileceği konusunda anlaştılar.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>Babası onu her gün ziyaret etti. Uzun zaman sonra, babası Anita ile birlikte geldi. Anita, Simbegwire'ın ellerine uzandı. &quot;Çok üzgünüm ufaklık. Ben hatalıydım.&quot; diye ağladı. &quot;Tekrar denememe izin verir misin?&quot; Simbegwire babasına ve endişeli yüzüne baktı. Ardından, yavaşça ileriye doğru adım attı ve kollarını Anita'ya sardı.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p>Bir sonraki hafta, Anita, Simbegwire'ı, halası ve kuzenleriyle birlikte eve yemeğe davet etti. Büyük bir ziyafetti! Anita Simbegwire'ın sevdiği tüm yiyecekleri hazırlamıştı, ve herkes doyana kadar yedi. Ardından, yetişkinler konuşurlarken, çocuklar oyun oynadılar. Simbegwire mutlu ve cesur hissetti. Yakın, çok yakın bir zamanda babası ve üvey annesi ile birlikte yaşamak için eve geri dönmeye karar verdi.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="simbegwire-1">Simbegwire</h2>
-<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
+<h2 id="蠟仔-1">蠟仔</h2>
+<strong>文:</strong> Southern African Folktale<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/children-wax'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
