--- a/stories/tr/0052_simbegwire.html
+++ b/stories/tr/0052_simbegwire.html
@@ -45,7 +45,7 @@
 
 <h1 id="simbegwire">Simbegwire</h1>
 
-Rukia Nantale<br>English</div><div class="pagebreak">
+Rukia Nantale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
 
@@ -159,7 +159,7 @@ Rukia Nantale<br>English</div><div class="pagebreak">
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Rukia Nantale<br /><strong>Illustrations:</strong> Benjamin Mitchley<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Rukia Nantale<br /><strong>Illustrations:</strong> Benjamin Mitchley<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/simbegwire">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
