--- a/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
+++ b/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="bir-küçük-tohum-wangari-maathainin-hikayesi-1">Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</h2>
-<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
