--- a/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok.html
+++ b/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok.html
@@ -45,7 +45,7 @@
 
 <h1 id="neden-su-aygrlarnn-tyleri-yok">Neden Su Aygırlarının Tüyleri Yok</h1>
 
-Basilio Gimo, David Ker<br>English</div><div class="pagebreak">
+Basilio Gimo, David Ker<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
@@ -103,7 +103,7 @@ Basilio Gimo, David Ker<br>English</div><div class="pagebreak">
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
