--- a/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html
+++ b/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="neden-su-aygırlarının-tüyleri-yok-1">Neden Su Aygırlarının Tüyleri Yok</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
