--- a/stories/tr/0243_büyükanne-ile-tatil_slides.html
+++ b/stories/tr/0243_büyükanne-ile-tatil_slides.html
@@ -277,7 +277,7 @@
 <section class="slide level1">
 
 <h2 id="büyükanne-ile-tatil-1">Büyükanne ile Tatil</h2>
-<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
