--- a/stories/index.html
+++ b/stories/index.html
@@ -603,6 +603,12 @@
       <td><a name="yue0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/yue/0234_球星安迪斯瓦_slides.html" target="_blank">球星安迪斯瓦</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0248</td>
       <td><a href="/stories/yue/0248_我去動物園_slides.html" target="_blank">我去動物園</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -649,6 +655,12 @@
       <td><a href="/stories/yue/0337_蠟仔_slides.html" target="_blank">蠟仔</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/yue/0342_懲罰_slides.html" target="_blank">懲罰</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0360</td>
@@ -4339,7 +4351,7 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -4501,7 +4513,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
